<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>lu.kbra</groupId>
	<artifactId>modelizer-next</artifactId>
	<version>${revision}</version>
	<name>Modelizer Next</name>
	<description>A compatible replacement for Modelizer</description>

	<properties>
		<revision>0.1-SNAPSHOT</revision>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<app.version>${revision}</app.version>
		<app.mainClass>lu.kbra.modelizer_next.MNMain</app.mainClass>
		<distributor></distributor>
	</properties>

	<repositories>
		<repository>
			<id>nexus.kbra.lu-public</id>
			<url>https://nexus.kbra.lu/repository/maven-public/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<!-- <repository>
			<id>nexus.kbra.lu-nightly</id>
			<url>https://nexus.kbra.lu/repository/maven-nightly/</url>
		</repository> -->
		<repository>
			<id>nexus.kbra.lu-releases</id>
			<url>https://nexus.kbra.lu/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>nexus.kbra.lu-snapshots</id>
			<url>https://nexus.kbra.lu/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>lu.kbra</groupId>
				<artifactId>pclib</artifactId>
				<version>1.0.2</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>lu.kbra</groupId>
			<artifactId>pclib-common</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.21.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.20.2</version>
		</dependency>

		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.6.2</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/filtered-resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.7.3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!-- To build native: enable 'native-build' and native-[linux|windows]''
		profiles for phase 'install" -->
		<!-- for shade: profile 'shade-package' for phase 'package' -->
		<!-- javadoc, source, shade and deploy: 'all' profile -->
		<!-- format for format -->
		<profile>
			<id>format</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>3.1.0</version>

						<executions>
							<execution>
								<phase>initialize</phase>

								<goals>
									<goal>run</goal>
								</goals>

								<configuration>
									<target>
										<mkdir
											dir="${maven.multiModuleProjectDirectory}/.local" />
										<get
											src="https://raw.githubusercontent.com/UnKabaraQuiDev/PCLib/main/eclipse-format.xml"
											dest="${maven.multiModuleProjectDirectory}/.local/eclipse-format.xml"
											usetimestamp="true" />
									</target>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>com.diffplug.spotless</groupId>
						<artifactId>spotless-maven-plugin</artifactId>
						<version>2.43.0</version>

						<configuration>
							<java>
								<eclipse>
									<file>
										${maven.multiModuleProjectDirectory}/.local/eclipse-format.xml</file>
								</eclipse>

								<removeUnusedImports />
								<importOrder>
									<order>java,javax,org,com,lu</order>
								</importOrder>

								<trimTrailingWhitespace />
								<endWithNewline />
							</java>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>native-build</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>3.6.0</version>
						<executions>
							<execution>
								<id>copy-dependencies</id>
								<phase>package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<outputDirectory>
										${project.build.directory}/jpackage-input</outputDirectory>
									<includeScope>runtime</includeScope>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>copy-jar</id>
								<phase>package</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>
										${project.build.directory}/jpackage-input</outputDirectory>
									<resources>
										<resource>
											<directory>
												${project.build.directory}</directory>
											<includes>
												<include>
													${project.build.finalName}.jar</include>
											</includes>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>native-windows</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>package-windows</id>
								<phase>install</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>jpackage</executable>
									<arguments>
										<argument>--type</argument>
										<argument>app-image</argument>
										<argument>--name</argument>
										<argument>${project.name}</argument>
										<argument>--app-version</argument>
										<argument>${app.version}</argument>
										<argument>--input</argument>
										<argument>
											${project.build.directory}/jpackage-input</argument>
										<argument>--main-jar</argument>
										<argument>${project.build.finalName}.jar</argument>
										<argument>--main-class</argument>
										<argument>${app.mainClass}</argument>
										<argument>--dest</argument>
										<argument>
											${project.build.directory}/dist/windows</argument>
										<argument>--add-modules</argument>
										<argument>
											java.base,java.desktop,java.logging,jdk.unsupported</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>native-linux</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>package-linux</id>
								<phase>install</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>jpackage</executable>
									<arguments>
										<argument>--type</argument>
										<argument>app-image</argument>
										<argument>--name</argument>
										<argument>${project.name}</argument>
										<argument>--app-version</argument>
										<argument>${app.version}</argument>
										<argument>--input</argument>
										<argument>
											${project.build.directory}/jpackage-input/</argument>
										<argument>--main-jar</argument>
										<argument>${project.build.finalName}.jar</argument>
										<argument>--main-class</argument>
										<argument>${app.mainClass}</argument>
										<argument>--dest</argument>
										<argument>
											${project.build.directory}/dist/linux</argument>
										<argument>--add-modules</argument>
										<argument>
											java.base,java.desktop,java.logging,jdk.unsupported</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>shade-package</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.5.0</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
									<transformers>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
											<mainClass>${app.mainClass}</mainClass>
										</transformer>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer" />
									</transformers>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>all</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<failOnError>false</failOnError>
							<doclint>all,-reference,-missing,-accessibility</doclint>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.5.0</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
							                <shadedArtifactAttached>true</shadedArtifactAttached>
        								<shadedClassifierName>with-dependencies</shadedClassifierName>
									<transformers>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
											<mainClass>${app.mainClass}</mainClass>
										</transformer>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer" />
									</transformers>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>3.1.2</version>
						<configuration>
							<skip>false</skip>
							<deployAtEnd>true</deployAtEnd>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
